Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjIntegerRetboolean.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, boolean> yoda
        boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
