Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjIntegerRetIntObjFail.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, Integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
